# imessage-rest-api

./: .gitignore  Cargo.toml  README.md  imessage-api.service
examples/: n8n-send-imessage.json
src/: error.rs  handlers.rs  main.rs  session.rs  types.rs
