[package]
name = "imessage-rest-api"
version = "0.1.0"
edition = "2021"
description = "A lightweight HTTP API for sending iMessages from Linux using an OpenBubbles session"
license = "SSPL-1.0"

[[bin]]
name = "imessage-api"
path = "src/main.rs"

[dependencies]
rustpush = { path = "../rustpush", features = ["macos-validation-data", "remote-anisette-v3"] }
keystore = { path = "../rustpush/keystore" }
axum = { version = "0.7", features = ["macros"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = "1.0"
plist = "1.5.0"
log = "0.4"
pretty_env_logger = "0.5.0"
uuid = { version = "1.4.1", features = ["v4"] }
anyhow = "1.0"
tower-http = { version = "0.5", features = ["cors"] }
